--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "elm-socketio",
+  "name": "elm-cloudmodel",
   "version": "0.0.1",
-  "description": "Example of using Elm 0.19 with socket.io",
+  "description": "Elm cloud model demonstration app",
   "main": "src/server/index.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -12,7 +12,7 @@
   },
   "author": "Jacob Matthews",
   "license": "MIT",
-  "repository": "https://github.com/matthewsj/elm-socketio.git",
+  "repository": "https://github.com/matthewsj/elm-cloudmodel.git",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.4",
