--- a/examples/chatapp/package.json
+++ b/examples/chatapp/package.json
@@ -5,9 +5,9 @@
   "main": "src/server/index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "npm run build && node src/server/index.js",
+    "start": "npm run build && npm run server",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-    "server": "nodemon src/server/index.js",
+    "server": "npx cloudmodel_serve",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jacob Matthews",
@@ -15,8 +15,7 @@
   "repository": "https://github.com/matthewsj/elm-cloudmodel.git",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "express": "^4.16.4",
-    "socket.io": "^2.2.0",
+    "elm-cloudmodel-server": "../../src",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
@@ -29,7 +28,6 @@
     "elm-webpack-loader": "^5.0.0",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.17.3",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
