--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,10 @@
   "description": "Code for writing an Elm cloudmodel application",
   "main": "client/js/index.js",
   "scripts": {
+    "clean": "rm -rf ./docs && rm client/js/index.js*",
     "compile": "npx tsc",
     "dev": "nodemon src/server/index.js",
+    "docs": "echo 'This is a work in progress...' && npx typedoc --out docs ./client/js/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@types/socket.io-client": "^1.4.32",
     "nodemon": "^1.19.1",
+    "typedoc": "^0.15.0",
     "typescript": "^3.5.3"
   },
   "dependencies": {
