--- a/examples/shared-todo/package.json
+++ b/examples/shared-todo/package.json
@@ -7,8 +7,8 @@
     "build": "webpack --mode production",
     "start": "npm run build && npm run server",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-    "server": "npx cloudmodel_serve",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "server": "npx cloudmodel_serve --static_dir='dist'",
+    "dev": "concurrently \"npx cloudmodel_serve\" \"npm run client\""
   },
   "author": "Jacob Matthews",
   "license": "MIT",
