--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Code for writing an Elm cloudmodel application",
   "main": "client/js/index.js",
   "scripts": {
-    "clean": "rm -rf ./docs && rm client/js/index.js*",
+    "clean": "rm -rf ./docs && rm src/client/js/index.js*",
     "compile": "npx tsc",
     "dev": "nodemon src/server/index.js",
-    "docs": "echo 'This is a work in progress...' && npx typedoc --out docs ./client/js/index.ts",
+    "docs": "echo 'This is a work in progress...' && npx typedoc --out docs ./src/client/js/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "cloudmodel_serve": "./server/index.js"
+    "cloudmodel_serve": "./src/server/index.js"
   },
+  "files": [
+    "./src",
+  ],
   "author": "Jacob Matthews",
   "repository": "https://github.com/matthewsj/elm-cloudmodel.git",
   "license": "MIT",
