Fix path that I missed

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elm-cloudmodel",
   "version": "0.1.0",
   "description": "Code for writing an Elm cloudmodel application",
-  "main": "client/js/index.js",
+  "main": "src/client/js/index.js",
   "scripts": {
     "clean": "rm -rf ./docs && rm src/client/js/index.js*",
     "compile": "npx tsc",
