Take 2 on heroku PORT

--- a/examples/shared-todo/package.json
+++ b/examples/shared-todo/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "npm run build && npm run server",
+    "heroku_serve": "npx cloudmodel_serve --static_dir='dist' --port=$PORT",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "npx cloudmodel_serve --static_dir='dist'",
     "dev": "concurrently \"npx cloudmodel_serve\" \"npm run client\""
