--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/socket.io-client": "^1.4.32",
+    "elm": "^0.19.0-no-deps",
+    "elm-format": "^0.8.2",
     "nodemon": "^1.19.1",
     "typedoc": "^0.15.0",
     "typescript": "^3.5.3"
