--- a/examples/shared-todo/package.json
+++ b/examples/shared-todo/package.json
@@ -2,7 +2,6 @@
   "name": "elm-cloudmodel-chatapp-example",
   "version": "0.0.1",
   "description": "Elm cloud model demonstration app",
-  "main": "src/server/index.js",
   "engines": {
     "node": "10.16.0"
   },
@@ -24,7 +23,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.0.0",
     "css-loader": "^3.2.0",
-    "elm-cloudmodel": "git+https://git@github.com/matthewsj/cloudmodel.git#752cbf4719ad55ec6cf676b5a5186c44c657d325",
+    "elm-cloudmodel": "git+https://git@github.com/matthewsj/cloudmodel.git#v0.2.0",
     "elm-format": "^0.8.2",
     "elm-webpack-loader": "^6.0.0",
     "elm": "^0.19.0-bugfix6",
